--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 
       <section id="player-section">
         <!-- utiliser l'id de cet élément pour intéragir avec le vrai lecteur audio -->
-        <audio id="audio-player" controls></audio>
+        <audio id="audio-player"></audio>
 
         <div id="player">
           <div id="player-thumbnail">
