--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,15 @@
 
     <link rel="manifest" href="manifest.webmanifest" />
 
+    <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+    <script>
+      window.OneSignalDeferred = window.OneSignalDeferred || [];
+      OneSignalDeferred.push(async function(OneSignal) {
+        await OneSignal.init({
+          appId: "171ff394-0ad0-4d69-82f4-6459661a9535",
+        });
+      });
+    </script>
   </head>
   <body>
     <header>
